# vocrab

./: Cargo.toml  README.md  tailwind.config.js
.github/workflows/: rust-check.yml
src/: main.rs  routes.rs  templates.rs
templates/: README.md  error.html  index.html  output.css  word.html
